bff-web: refactoring
